<resources>
    <string name="app_name">Casa Por Temporada</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="entrar">Entrar</string>
    <string name="login_btn">Login</string>
    <string name="titulo">titulo</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="insira_seu_e_mail_abaixo_para_receber_um_e_mail_para_recuperar_sua_conta">Insira seu e-mail abaixo para receber um e-mail para recuperar sua conta</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="recuperar_conta">Recuperar Conta</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="t_tulo">Título</string>
    <string name="descri_o">Descrição</string>
    <string name="ex_3">Ex 3</string>
    <string name="quartos">Quartos</string>
    <string name="garagem">Garagem</string>
    <string name="ex_1">Ex 1</string>
    <string name="banheiros">Banheiros</string>
    <string name="ex_2">Ex 2</string>
    <string name="dispon_vel">Disponível</string>
    <string name="casa_por_temporada">Casa Por Temporada</string>
    <string name="menu">Menu</string>
    <string name="filtrar">Filtrar</string>
    <string name="meus_an_ncios">Meus Anúncios</string>
    <string name="minha_conta">Minha Conta</string>
</resources>